@@ -77,6 +77,7 @@
  * For Intel Chips, not just Intel Motherboards.  Confirmed for:
  *
  * Intel S5500WB/Penguin Computing Relion 700
+ * Intel S2600JF/Appro 512X
  * Inventec 5441/Dell Xanadu II
  * Inventec 5442/Dell Xanadu III
  * Quanta S99Q/Dell FS12-TY
@@ -254,6 +255,12 @@ _intel_node_manager_init (ipmi_sel_parse_ctx_t ctx)
       ctx->intel_node_manager.node_manager_data_found = 1;
       found = 1;
       break;
+    }
+
+  if (!found)
+    {
+      ctx->intel_node_manager.node_manager_data_parsed = 1;
+      ctx->intel_node_manager.node_manager_data_found = 0;
     }
 
   rv = found;
