@@ -1,5 +1,10 @@
 2011-10-17  Albert Chu <chu11@llnl.gov>
 
+	* Support Intel Node Manager sensor/SEL events for Intel
+	S2600JF/Appro 512X.
+	
+2011-10-17  Albert Chu <chu11@llnl.gov>
+
 	* libfreeipmi/src/util/ipmi-sensor-and-event-code-tables-util.c (get_management_subsystem_health_event_data2_message):
 	Fix corner case output bug.
 	
